--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 $Header$
 
-libtrace 3.0.2
+libtrace 3.0.4
 
 ---------------------------------------------------------------------------
-Copyright (c) 2007 The University of Waikato, Hamilton, New Zealand.
+Copyright (c) 2007-2008 The University of Waikato, Hamilton, New Zealand.
 All rights reserved.
 
 This code has been developed by the University of Waikato WAND
