--- a/tools/tracereport/tracereport.1
+++ b/tools/tracereport/tracereport.1
@@ -1,4 +1,4 @@
-.TH TRACEMERGE "1" "October 2006" "tracereport (libtrace)" "User Commands"
+.TH TRACEREPORT "1" "October 2006" "tracereport (libtrace)" "User Commands"
 .SH NAME
 tracereport \- produce various reports on a trace (or traceset)
 .SH SYNOPSIS
@@ -155,8 +155,8 @@ http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), tracefilter(1),
-traceconvert(1), tracestats(1), tracertstats(1), tracereport(1), tracedump(1),
-traceanon(1), tracesummary(1)
+traceconvert(1), tracestats(1), tracertstats(1), tracereport(1), 
+tracepktdump(1), traceanon(1), tracesummary(1), tracereplay(1), tracediff(1)
 
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
