--- a/tools/tracertstats/tracertstats.1
+++ b/tools/tracertstats/tracertstats.1
@@ -1,4 +1,4 @@
-.TH TRACESTATS "1" "November 2006" "tracestats (libtrace)" "User Commands"
+.TH TRACERTSTATS "1" "November 2006" "tracertstats (libtrace)" "User Commands"
 .SH NAME
 tracertstats \- perform simple filter based analysis on a trace
 .SH SYNOPSIS
@@ -99,7 +99,8 @@ http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), tracefilter(1), 
-traceconvert(1), tracereport(1), tracedump(1), traceanon(1), tracesummary(1)
+traceconvert(1), tracereport(1), tracepktdump(1), traceanon(1), tracesummary(1),
+traceconvert(1), tracereplay(1), tracediff(1)
 
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
