--- a/tools/tracesplit/tracefilter.1
+++ b/tools/tracesplit/tracefilter.1
@@ -1,4 +1,4 @@
-.TH TRACECONVERT "1" "October 2005" "tracefilter (libtrace)" "User Commands"
+.TH TRACEFILTER "1" "October 2005" "tracefilter (libtrace)" "User Commands"
 .SH NAME
 tracefilter \- apply a bpf filter to a trace
 .SH SYNOPSIS
@@ -15,8 +15,8 @@ http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracesplit_dir(1), traceconvert(1),
-tracereport(1), tracestats(1), tracertstats(1), tracedump(1), traceanon(1), 
-tracesummary(1)
+tracereport(1), tracestats(1), tracertstats(1), tracepktdump(1), traceanon(1), 
+tracesummary(1), tracereplay(1), tracediff(1)
 
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
