--- a/tools/tracesplit/traceconvert.1
+++ b/tools/tracesplit/traceconvert.1
@@ -21,8 +21,8 @@ http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracesplit(1), tracefilter(1), tracesummary(1),
-tracereport(1), tracesplit_dir(1), tracestats(1), tracertstats(1), tracedump(1),
-traceanon(1), tracesummary(1)
+tracereport(1), tracesplit_dir(1), tracestats(1), tracertstats(1), 
+tracepktdump(1), traceanon(1), tracereplay(1), tracediff(1)
 
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
