--- a/tools/tracesplit/tracesplit_dir.1
+++ b/tools/tracesplit/tracesplit_dir.1
@@ -1,15 +1,15 @@
-.TH TRACESPLIT "1" "November 2006" "tracesplit (libtrace)" "User Commands"
+.TH TRACESPLITDIR "1" "November 2006" "tracesplit_dir (libtrace)" "User Commands"
 .SH NAME
 tracesplit_dir \- split traces into two directions
 .SH SYNOPSIS
-.B tracemerge
+.B tracesplit_dir
 inputuri outputuri_incoming outputuri_outgoing
 .SH DESCRIPTION
-tracesplit splits one trace into two tracefiles, one for each direction.
+tracesplit_dir splits one trace into two tracefiles, one for each direction.
 
 .SH EXAMPLES
 .nf
-tracesplit erf:/traces/bigtrace.gz erf:in.gz erf:out.gz
+tracesplit_dir erf:/traces/bigtrace.gz erf:in.gz erf:out.gz
 .fi
 
 .SH LINKS
@@ -18,8 +18,8 @@ http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracesplit(1),
-tracereport(1), tracertstats(1), tracestats(1), tracedump(1), traceanon(1),
-tracesummary(1)
+tracereport(1), tracertstats(1), tracestats(1), tracepktdump(1), traceanon(1),
+tracesummary(1), tracereplay(1), tracediff(1)
 
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
