--- a/tools/tracesplit/tracesplit.1
+++ b/tools/tracesplit/tracesplit.1
@@ -11,7 +11,7 @@ tracesplit \- split traces
 [ \fB-e \fRunixtime | \fB--endtime=\fRunixtime]
 [ \fB-m \fRmaxfiles | \fB--maxfiles=\fRmaxfiles]
 [ \fB-S \fRsnaplen | \fB--snaplen=\fRsnaplen]
-[ \fB-z \fRlevel | \fB--compress=\fRlevel]
+[ \fB-z \fRlevel | \fB--compress-level=\fRlevel]
 [ \fB-Z \fRmethod | \fB--compress-type=\fRmethod]
 inputuri outputuri ...
 .SH DESCRIPTION
