* Fixed inaccuracies in tracetop and tracediff manpages

--- a/tools/tracediff/tracediff.1
+++ b/tools/tracediff/tracediff.1
@@ -12,8 +12,7 @@ differ to standard output. This is useful for finding packets that are present
 in one trace but not another or for finding conversion or snapping errors.
 
 .TP
-.PD 0
-.BI \-m maxdiff
+\fB\-m\fR maxdiff
 stop processing after displaying 'maxdiff' differences
 
 .SH EXAMPLES
