--- a/tools/tracetop/tracetop.1
+++ b/tools/tracetop/tracetop.1
@@ -6,9 +6,9 @@ tracetop \- show top flows
 [ \fB-f \fRbpf | \fB--filter=\fRbpf]
 [ \fB-s \fRsnaplen | \fB--snaplen=\fRsnaplen]
 [ \fB-p \fRpromisc | \fB--promisc=\fRpromisc]
-[ \fB--bytes-per-sec ]
+[ \fB--bits-per-sec ]
 [ \fB--percent ]
-[ \fB-interval \fRi | \fB--interval=\fRinterval]
+[ \fB-i \fRinterval | \fB--interval=\fRinterval]
 [ \fB-h \fR| \fB--help\fR]
 [ \fB-H \fR| \fB--libtrace-help\fR]
 inputuri ...
