--- a/tools/tracediff/tracediff.1
+++ b/tools/tracediff/tracediff.1
@@ -31,7 +31,8 @@ http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracestats(1),
 tracesummary(1), tracertstats(1), tracesplit(1), tracesplit_dir(1),
-tracereport(1), tracepktdump(1), traceanon(1), tracereplay(1)
+tracereport(1), tracepktdump(1), traceanon(1), tracereplay(1),
+traceends(1), tracetopends(1)
 
 .SH AUTHORS
 Shane Alcock <salcock@cs.waikato.ac.nz>
