--- a/tools/traceends/tracetopends.1
+++ b/tools/traceends/tracetopends.1
@@ -1,83 +1,88 @@
-.TH TRACESPLIT "1" "January 2011" "tracesplit (libtrace)" "User Commands"
+.TH TRACETOPENDS "1" "September 2011" "tracetopends (libtrace)" "User Commands"
 .SH NAME
-tracesplit \- split traces
+tracetopends \- reports the endpoints that are responsible for the most traffic
+in a trace
 .SH SYNOPSIS
-.B tracesplit
-[ \fB-f \fRbpf | \fB--filter=\fRbpf]
-[ \fB-c \fRcount | \fB--count=\fRcount]
-[ \fB-b \fRbytes | \fB--bytes=\fRbytes]
-[ \fB-i \fRseconds | \fB--seconds=\fRseconds]
-[ \fB-s \fRunixtime | \fB--starttime=\fRunixtime]
-[ \fB-e \fRunixtime | \fB--endtime=\fRunixtime]
-[ \fB-m \fRmaxfiles | \fB--maxfiles=\fRmaxfiles]
-[ \fB-S \fRsnaplen | \fB--snaplen=\fRsnaplen]
-[ \fB-z \fRlevel | \fB--compress-level=\fRlevel]
-[ \fB-Z \fRmethod | \fB--compress-type=\fRmethod]
-inputuri [inputuri ...] outputuri
+.B tracetopends
+[ \fB-f \fRbpf ]
+[ \fB-A \fRaddrtype ]
+[ \fB-s ]
+[ \fB-d ]
+[ \fB-b ]
+[ \fB-a ]
+[ \fB-p ]
+[ \fB-n \fRtopcount ]
+inputuri [inputuri ...] 
 .SH DESCRIPTION
-tracesplit splits the given input traces into multiple tracefiles
+tracetopends reports the number of bytes and packets sent and received by the
+busiest endpoints observed in the input trace(s). 
+
 .TP
 \fB\-f\fR bpf filter
-output only packets that match tcpdump style bpf filter
+Output only packets that match tcpdump style bpf filter.
 
 .TP
-\fB\-c\fR count
-output count packets per output file.  The output file will be named after
-the basename given in the outputuri with the packet number of the first packet
-in this file.
+\fB\-n\fR top count
+Report the top N endpoints (defaults to 10).
 
 .TP
-\fB\-b\fR bytes
-output bytes bytes per file
+\fB\-A\fR address type
+Specifies how an endpoint should be defined. Suitable options are "mac", "v4" 
+and "v6" which will report endpoint stats for each observed MAC address, IPv4
+address and IPv6 address respectively.
 
 .TP
-\fB\-i\fR seconds
-start a new tracefile after "seconds" seconds
+\fB\-s
+Sort endpoints based on the amount of outgoing traffic (will cancel any 
+previous \-d option. This is on by default.
 
 .TP
-\fB\-s\fR unixtime
-don't output any packets before unixtime
+\fB\-d
+Sort endpoints based on the amount of incoming traffic (will cancel any 
+previous \-s option. 
 
 .TP
-\fB\-e\fR unixtime
-don't output any packets after unixtime
+\fB\-b
+Sort endpoints based on the amount of IP traffic (will cancel any previous 
+\-a or \-p options. This is on by default. 
 
 .TP
-\fB\-m\fR maxfiles
-do not create more than "maxfiles" trace files
+\fB\-a
+Sort endpoints based on the amount of application layer traffic (will cancel 
+any previous \-b or \-p options. 
 
 .TP
-\fB\-S\fR snaplen
-Truncate packets to "snaplen" bytes long.  The default is collect the entire
-packet.
+\fB\-p
+Sort endpoints based on the amount of packets (will cancel any previous 
+\-b or \-a options. 
 
-.TP
-\fB\-z\fR level
-Compress the data using the specified compression level, ranging from 0 to 9. 
-Higher compression levels tend to result in better compression but require
-more processing power to compress.
+.SH OUTPUT
+Output is written to stdout in columns separated by blank space. 
 
-.TP
-\fB-Z\fR compression-method
-Compress the data using the specified compression algorithm. Accepted methods
-are "gzip", "bzip2", "lzo" or "none". Default value is none unless a 
-compression level is specified, in which case gzip will be used.
+The columns are (in order):
+ * Endpoint address
+ * Time last observed
+ * Packets originating from the endpoint
+ * Bytes originating from the endpoint (IP header onwards)
+ * Payload originating from the endpoint (post transport header)
+ * Packets sent to the endpoint
+ * Bytes sent to the endpoint (IP header onwards)
+ * Payload sent to the endpoint (post transport header)
 
 .SH EXAMPLES
-create a 1MB erf trace of port 80 traffic.
+Find the IPv4 addresses that are sending the most traffic.
 .nf
-tracesplit \-z 1 -Z gzip \-f 'port 80' \-b $[ 1024 * 1024 ] 
-erf:/traces/bigtrace.gz erf:/traces/port80.gz 
+tracetopends -A v4 -b -s erf:trace.erf.gz
 .fi
 
 .SH LINKS
-More details about tracesplit (and libtrace) can be found at
+More details about tracetopends (and libtrace) can be found at
 http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 
 .SH SEE ALSO
 libtrace(3), tracemerge(1), tracefilter(1), traceconvert(1), tracesplit_dir(1),
 tracereport(1), tracertstats(1), tracestats(1), tracepktdump(1), traceanon(1),
-tracesummary(1), tracereplay(1), tracediff(1)
+tracesummary(1), tracereplay(1), tracediff(1), traceends(1)
 
 .SH AUTHORS
-Perry Lorier <perry@cs.waikato.ac.nz>
+Shane Alcock <salcock@cs.waikato.ac.nz>
