--- a/tools/tracereplay/tracereplay.1
+++ b/tools/tracereplay/tracereplay.1
@@ -45,7 +45,8 @@ http://www.wand.net.nz/trac/libtrace/wiki/UserDocumentation
 .SH SEE ALSO
 libtrace(3), tracesplit(1), tracesplit_dir(1), tracefilter(1), tracemerge(1),
 traceconvert(1), tracereport(1), tracertstats(1), tracestats(1), 
-tracepktdump(1), traceanon(1), tracesummary(1), tracediff(1)
+tracepktdump(1), traceanon(1), tracesummary(1), tracediff(1),
+traceends(1), tracetopends(1)
 
 .SH AUTHORS
 Andreas Loef <andreas.lof@cs.waikato.ac.nz>, Yuwei Wang <yww4@cs.waikato.ac.nz>
