--- a/INSTALL
+++ b/INSTALL
@@ -26,6 +26,19 @@ You may need to add the library location (e.g. /usr/local/lib) to your
 /etc/ld.so.conf and run 'ldconfig' as root.
 
 ----------------------------------
+
+Installation FAQ:
+
+Q. I've installed libpcap but I'm still getting the following error: 
+"libpcap0.8 or greater is required to compile libtrace. If you have installed 
+it in a non-standard location please use LDFLAGS to specify the location of 
+the library"?
+
+A. You need to install the development version of the pcap library. 
+For example, Ubuntu/Debian users will need to install the libpcap0.8-dev package 
+in addition to the libpcap0.8 package.
+
+----------------------------------
 Using libtrace:
 
 The best source of information on how to use libtrace and the tools that come
