--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ The primary authors of libtrace were:
  * Perry Lorier
  * Shane Alcock
  * Daniel Lawson
+ * Richard Sanger
 
 Libtrace is currently maintained by Shane Alcock <salcock@waikato.ac.nz>.
 
@@ -18,13 +19,13 @@ In no particular order, we would like to recognise:
  * Simon Wadsworth for writing the original version of most of the OSPF code
  * Nevil Brownlee for reporting a huge number of bugs
  * Andreas Löf and Yuwei Wang for writing tracereplay
- * Richard Sanger for writing the ring: format
  * Scott Raynel for writing most of the wireless metadata code
  * Josef Vodanovich for writing parts of tracereport
  * Guillaume Vu-Brugier for reporting and fixing some build errors
  * John Dickinson for patching in support for ICMPv6
  * Kaio Rafael and Diógenes Freitas for patching in support for OpenBSD loopback
  * Robert Edmonds for tidying up the libpacketdump plugin install
+ * Martin Bligh for patching in support for nanosecond pcap traces
  * Jamie Curtis for fixing a couple of bugs many many years ago
  * Brendon Jones for creating the original Windows DLLs and writing bits of
    code here and there
