--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+This fork of Libtrace aims to support parallel packet processing.
+
+This is still work in progress and is full of bugs, some of the original
+Libtrace functions might not function correctly breaking the supplied tools.
+
 libtrace 3.0.19
 
 ---------------------------------------------------------------------------
