--- a/tools/traceanon/traceanon.1
+++ b/tools/traceanon/traceanon.1
@@ -85,7 +85,7 @@ require more CPU to compress data. Defaults to no compression.
 .PD
 .BI \-\^\-compress-type=method
 compress the output trace using the compression algorithm "method". Possible
-algorithms are "gzip", "bzip2", "lzo" and "none". Default is "none".
+algorithms are "gzip", "bzip2", "lzo", "xz" and "none". Default is "none".
 
 .SH EXAMPLES
 .nf
