--- a/tools/tracesplit/tracesplit.1
+++ b/tools/tracesplit/tracesplit.1
@@ -60,7 +60,7 @@ more processing power to compress.
 .TP
 \fB-Z\fR compression-method
 Compress the data using the specified compression algorithm. Accepted methods
-are "gzip", "bzip2", "lzo" or "none". Default value is none unless a 
+are "gzip", "bzip2", "lzo", "xz" or "none". Default value is none unless a 
 compression level is specified, in which case gzip will be used.
 
 .SH EXAMPLES
