--- a/INSTALL
+++ b/INSTALL
@@ -2,9 +2,7 @@ Requirements:
  * >=automake-1.9
  * >=libpcap-0.8
  * flex and bison
-
-Strongly recommended:
- * zlib-dev (for reading and writing compressed traces)
+ * libwandio (get it from http://research.wand.net.nz/software/libwandio.php)
 
 Optional:
  * DAG libraries (both 2.4 and 2.5 versions are supported)
