--- a/tools/traceanon/traceanon.1
+++ b/tools/traceanon/traceanon.1
@@ -11,17 +11,20 @@ traceanon \- anonymise ip addresses of traces
 [ \-f expr | \-\^\-filter=expr ]
 [ \-z level | \-\^\-compress-level=level ]
 [ \-Z method | \-\^\-compress-type=method ]
+[ \-t threadcount | \-\^\-threads=threadcount ]
+
 sourceuri
 desturi
 .SH DESCRPTION
 traceanon anonymises a trace by replacing IP addresses found in the IP header,
-and any embedded packets inside an ICMP packet.  It also fixes the checksums
-inside TCP and UDP headers.
+and any embedded packets inside an ICMP packet.  It also replaces the checksums
+inside TCP, UDP and ICMPv6 headers with zeroes.
 
 Two anonymisation schemes are supported, the first replaces a prefix with
 another prefix.  This can be used for instance to replace a /16 with the
 equivilent prefix from RFC1918.  The other scheme is cryptopan which is a
-prefix preserving encryption scheme based on AES.
+prefix preserving encryption scheme based on AES (traceanon must be built
+with libcrypto support to be able to use the cryptopan scheme).
 .TP
 .PD 0
 .BI \-s 
@@ -44,7 +47,8 @@ encrypt only destination ip addresses.
 .TP
 .PD
 .BI \-\^\-prefix=prefix
-substitute the high bits of the IP addresses with the provided prefix.
+substitute the high bits of the IP addresses with the provided IPv4 prefix. 
+This method will only anonymise IPv4 addresses; IPv6 packets will be untouched.
 
 .TP
 .PD 0
@@ -98,6 +102,15 @@ require more CPU to compress data. Defaults to no compression.
 compress the output trace using the compression algorithm "method". Possible
 algorithms are "gzip", "bzip2", "lzo", "xz" and "none". Default is "none".
 
+.TP
+.PD 0
+.BI \-t
+.TP
+.PD
+.BI \-\^\-threads=threadcount
+use the specified number of threads to anonymise packets. The default number
+of threads is 4.
+
 .SH EXAMPLES
 .nf
 traceanon \-\^\-cryptopan="fish go moo, oh yes they do" \\
@@ -126,3 +139,5 @@ traceends(1), tracetopends(1)
 
 .SH AUTHORS
 Perry Lorier <perry@cs.waikato.ac.nz>
+Shane Alcock <salcock@waikato.ac.nz>
+Richard Sanger <rjs51@students.waikato.ac.nz>
