--- a/INSTALL
+++ b/INSTALL
@@ -6,6 +6,9 @@ Requirements:
 
 Optional:
  * DAG libraries (both 2.4 and 2.5 versions are supported)
+ * libcrypto (required for CryptoPAN anonymisation in traceanon)
+ * libncurses (required for tracetop)
+ 
 ----------------------------------
 
 Installing libtrace:
@@ -16,25 +19,25 @@ make
 make install
 
 The above series of commands will install libtrace into /usr/local/lib. If
-you wish to install to a non-standard location, append the 
+you wish to install to a non-standard location, append the
 --prefix=DIR option to the ./configure command. ./configure also takes
 a number of other options - run ./configure --help to view a comprehensive
 list.
 
-You may need to add the library location (e.g. /usr/local/lib) to your 
+You may need to add the library location (e.g. /usr/local/lib) to your
 /etc/ld.so.conf and run 'ldconfig' as root.
 
 ----------------------------------
 
 Installation FAQ:
 
-Q. I've installed libpcap but I'm still getting the following error: 
-"libpcap0.8 or greater is required to compile libtrace. If you have installed 
-it in a non-standard location please use LDFLAGS to specify the location of 
+Q. I've installed libpcap but I'm still getting the following error:
+"libpcap0.8 or greater is required to compile libtrace. If you have installed
+it in a non-standard location please use LDFLAGS to specify the location of
 the library"?
 
-A. You need to install the development version of the pcap library. 
-For example, Ubuntu/Debian users will need to install the libpcap0.8-dev 
+A. You need to install the development version of the pcap library.
+For example, Ubuntu/Debian users will need to install the libpcap0.8-dev
 package in addition to the libpcap0.8 package.
 
 
@@ -42,7 +45,6 @@ package in addition to the libpcap0.8 package.
 Using libtrace:
 
 The best source of information on how to use libtrace and the tools that come
-with it is the libtrace wiki located at 
-http://www.wand.net.nz/trac/libtrace/wiki
+with it is the libtrace wiki: https://github.com/wanduow/libtrace/wiki
 
 
