Update INSTALL and README to be explicit about supported OSs

--- a/README
+++ b/README
@@ -12,11 +12,13 @@ See INSTALL for instructions on how to install libtrace.
 
 This directory contains source code for libtrace, a userspace library for 
 processing of network traffic capture from live interfaces or from offline
-traces.
+traces. 
 
 libtrace was primarily designed for use with the real-time interface to the 
 Waikato DAG Capture Point software running at The University of Waikato, 
 and has been since extended to a range of other trace and interface formats.
+
+Libtrace should build and run on Linux, Mac OS X, FreeBSD and OpenBSD systems.
 
 Further information about libtrace see 
 http://research.wand.net.nz/software/libtrace.php
