--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 libtrace 4.0.0
 
 ---------------------------------------------------------------------------
-Copyright (c) 2007-2015 The University of Waikato, Hamilton, New Zealand.
+Copyright (c) 2007-2016 The University of Waikato, Hamilton, New Zealand.
 All rights reserved.
 
 This code has been developed by the University of Waikato WAND
@@ -10,12 +10,12 @@ research group. For further information please see http://www.wand.net.nz/.
 
 See INSTALL for instructions on how to install libtrace.
 
-This directory contains source code for libtrace, a userspace library for 
+This directory contains source code for libtrace, a userspace library for
 processing of network traffic capture from live interfaces or from offline
-traces. 
+traces.
 
-libtrace was primarily designed for use with the real-time interface to the 
-Waikato DAG Capture Point software running at The University of Waikato, 
+libtrace was primarily designed for use with the real-time interface to the
+Waikato DAG Capture Point software running at The University of Waikato,
 and has been since extended to a range of other trace and interface formats.
 
 In version 4.0, we have introduced an API for processing packets in parallel
@@ -28,8 +28,9 @@ http://research.wand.net.nz/software/libtrace.php
 Bugs should be reported by either emailing contact@wand.net.nz or filing
 an issue at https://github.com/wanduow/libtrace
 
-It is licensed under the GNU General Public License (GPL) version 2. Please
-see the included file GPL for details of this license.
+It is licensed under the GNU Lesser General Public License (GPL) version 3.
+Please see the included files COPYING and COPYING.LESSER for details of this
+license.
 
 A detailed ChangeLog can be found on the libtrace wiki:
 https://github.com/wanduow/libtrace/wiki/ChangeLog
