Thank Robert Zeh and Anthony Coddington for their contributions.

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,9 @@ In no particular order, we would like to recognise:
  * "EaseTheWorld" for their work with improving the packet statistics API, as
    well as reporting several bugs
  * Richard Cziva for contributing to the DPDK support
+ * Robert Zeh for resolving some wandio errors that were causing crashes
+ * Anthony Coddington for adding ERF provenance support and fixing a number
+   of other ERF/DAG issues
  * Jamie Curtis for fixing a couple of bugs many many years ago
  * Brendon Jones for creating the original Windows DLLs and writing bits of
    code here and there
