Fix incorrect example in tracetopends man page

--- a/tools/traceends/tracetopends.1
+++ b/tools/traceends/tracetopends.1
@@ -91,7 +91,7 @@ The columns are (in order):
 .SH EXAMPLES
 Find the IPv4 addresses that are sending the most traffic.
 .nf
-tracetopends -A v4 -b -s -S erf:trace.erf.gz
+tracetopends -A v4 -b -s -D erf:trace.erf.gz
 .fi
 
 .SH LINKS
